[gd_scene load_steps=2 format=2]

[ext_resource path="res://StateStubGraphNode.gd" type="Script" id=1]

[node name="StateStubGraphNode" type="GraphNode"]
margin_right = 249.0
margin_bottom = 79.0
title = "State Stub"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0, 1, 0, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0, 1, 0, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateLineEdit" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 233.0
margin_bottom = 48.0
placeholder_text = "State"
caret_blink = true
caret_blink_speed = 0.5

[node name="TextLineEdit" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 49.0
margin_right = 233.0
margin_bottom = 73.0
placeholder_text = "Text"
caret_blink = true
caret_blink_speed = 0.5
[connection signal="close_request" from="." to="." method="_on_StateStubGraphNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_StateStubGraphNode_resize_request"]
[connection signal="sort_children" from="." to="." method="_on_StateStubGraphNode_sort_children"]
[connection signal="text_changed" from="TextLineEdit" to="." method="_on_TextLineEdit_text_changed"]
